[project]
name = "email-agent"
version = "1.0.0"
description = "Flask server for Gmail actions using Composio with OAuth2 authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "composio>=0.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
exe = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
email-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "config.py"]

[tool.hatch.build.targets.sdist]
only-include = ["main.py", "config.py", "pyproject.toml", "README.md"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pyinstaller]
# PyInstaller configuration for building .exe
name = "EmailAgent"
onefile = true
console = true
